Fix some buttons having unreadable white text

--- a/src/general.less
+++ b/src/general.less
@@ -14,6 +14,7 @@
     --main-background-color: var(--breeze-window-background);
     --input-text-color: var(--main-text-color);
     --button-text-color: var(--main-text-color);
+    --primary-button-text-color: var(--button-text-color);
     --muted-text-color: #939597;
 
     --modal-background-color: var(--breeze-modal-background);
